--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -204,7 +204,7 @@
 						</div>
 					</div>
 					<div class="col-xs-12 col-sm-12 col-md-6 col-lg-4">
-						<div class="tile-stats clickable" onclick="goTo('provider/list')">
+						<div class="tile-stats clickable" onclick="goTo('provider/mancatoPagamentoAnnuale/list')">
 							<div class="icon"><i class="fa fa-credit-card"></i></div>
 							<div class="col-xs-10">
 			                	<div class="count" th:text="${homeWrapper.providerPagamentoNonEffettuatoAllaScadenza}"></div>
