--- a/src/main/resources/templates/accreditamento/accreditamentoFragment.html
+++ b/src/main/resources/templates/accreditamento/accreditamentoFragment.html
@@ -53,6 +53,7 @@
 										(accreditamentoWrapper.accreditamento.decretoDiniego != null and !accreditamentoWrapper.accreditamento.decretoDiniego.new) or
 										(accreditamentoWrapper.accreditamento.richiestaIntegrazione != null and !accreditamentoWrapper.accreditamento.richiestaIntegrazione.new) or
 										(accreditamentoWrapper.accreditamento.richiestaPreavvisoRigetto != null and !accreditamentoWrapper.accreditamento.richiestaPreavvisoRigetto.new) or
+										(accreditamentoWrapper.accreditamento.fileDecadenza != null and !accreditamentoWrapper.accreditamento.fileDecadenza.new) or
 										(accreditamentoWrapper.accreditamento.verbaleValutazioneSulCampoPdf != null and !accreditamentoWrapper.accreditamento.verbaleValutazioneSulCampoPdf.new))}" class="presentation">
 							<a href="#tab_content5" role="tab" id="tab5" data-toggle="tab" aria-expanded="false" th:text="#{label.documenti}">
 								Documenti
@@ -951,6 +952,7 @@
 										(accreditamentoWrapper.accreditamento.decretoAccreditamento != null and !accreditamentoWrapper.accreditamento.decretoAccreditamento.new) or
 										(accreditamentoWrapper.accreditamento.decretoDiniego != null and !accreditamentoWrapper.accreditamento.decretoDiniego.new) or
 										(accreditamentoWrapper.accreditamento.richiestaIntegrazione != null and !accreditamentoWrapper.accreditamento.richiestaIntegrazione.new) or
+										(accreditamentoWrapper.accreditamento.fileDecadenza != null and !accreditamentoWrapper.accreditamento.fileDecadenza.new) or
 										(accreditamentoWrapper.accreditamento.richiestaPreavvisoRigetto != null and !accreditamentoWrapper.accreditamento.richiestaPreavvisoRigetto.new) or
 										(accreditamentoWrapper.accreditamento.verbaleValutazioneSulCampoPdf != null and !accreditamentoWrapper.accreditamento.verbaleValutazioneSulCampoPdf.new)}" role="tabpanel" class="tab-pane fade" id="tab_content5" aria-labelledby="tab5">
 							<!--  TAB 5 -->
@@ -1061,6 +1063,24 @@
 												<div>
 													<div class="value"><i class="fa fa-download"> </i> <a th:text="${accreditamentoWrapper.accreditamento.verbaleValutazioneSulCampoPdf.nomeFile}" th:href="@{|/file/${accreditamentoWrapper.accreditamento.verbaleValutazioneSulCampoPdf.id}|}"></a></div>
 													<div class="" th:if="${accreditamentoWrapper.accreditamento.verbaleValutazioneSulCampoPdf.isProtocollato()}"><div class="value"><i class="fa fa-pencil"> </i><span th:text="#{label.info_protocollo(${#numbers.formatInteger(accreditamentoWrapper.accreditamento.verbaleValutazioneSulCampoPdf.protocollo.numero,0)},${#temporals.format(accreditamentoWrapper.accreditamento.verbaleValutazioneSulCampoPdf.protocollo.data,'dd/MM/yyyy')})}"></span></div></div>
+												</div>
+											</div>
+
+											<div class="divider-dashed" th:if="${accreditamentoWrapper.accreditamento.noteOsservazioniIntegrazione} or
+																				${accreditamentoWrapper.accreditamento.noteOsservazioniPreavvisoRigetto} or
+																				${accreditamentoWrapper.accreditamento.decretoAccreditamento} or
+																				${accreditamentoWrapper.accreditamento.decretoDiniego} or
+																				${accreditamentoWrapper.accreditamento.richiestaIntegrazione} or
+																				${accreditamentoWrapper.accreditamento.richiestaPreavvisoRigetto} or
+																				${accreditamentoWrapper.accreditamento.verbaleValutazioneSulCampoPdf}"></div>
+
+											<div th:if="${accreditamentoWrapper.accreditamento.fileDecadenza}">
+												<label class="control-label">
+													<span th:class="label-show" th:text="#{label.allegato_decadenza}">Allegato decadenza Provider</span>
+												</label>
+												<div>
+													<div class="value"><i class="fa fa-download"> </i> <a th:text="${accreditamentoWrapper.accreditamento.fileDecadenza.nomeFile}" th:href="@{|/file/${accreditamentoWrapper.accreditamento.fileDecadenza.id}|}"></a></div>
+													<div class="" th:if="${accreditamentoWrapper.accreditamento.fileDecadenza.isProtocollato()}"><div class="value"><i class="fa fa-pencil"> </i><span th:text="#{label.info_protocollo(${#numbers.formatInteger(accreditamentoWrapper.accreditamento.fileDecadenza.protocollo.numero,0)},${#temporals.format(accreditamentoWrapper.accreditamento.fileDecadenza.protocollo.data,'dd/MM/yyyy')})}"></span></div></div>
 												</div>
 											</div>
 										</div>
