--- a/src/main/resources/templates/fragments/sidebarAndTop.html
+++ b/src/main/resources/templates/fragments/sidebarAndTop.html
@@ -64,7 +64,7 @@
 									<span class="fa fa-chevron-down"></span>
 								</a>
 								<ul class="nav child_menu" style="display: none">
-									<li><a th:href="@{/provider/list}" th:text="#{label.provider}">label.provider</a></li>
+									<li><a th:href="@{/provider/list/all}" th:text="#{label.provider}">label.provider</a></li>
 									<li><a th:href="@{/evento/list}" th:text="#{label.eventi}"></a></li>
 									<li><a th:href="@{/user/list}" th:text="#{label.utenti}">label.utenti</a></li>
 									<li><a th:href="@{/seduta/list}" th:text="#{label.lista_sedute}">label.lista_sedute</a></li>
