Modificata label tasto Annula in confirmDeleteEvento

--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -459,7 +459,7 @@
 					$('#deleteButton').html("<a class='btn btn-danger' href='" + url + "'>Elimina</a>");
 			    }else{
 			    	$('#deleteMsg').html("<h2>Si desidera annullare definitivamente l'evento " + codiceIdentificativo + " (" + tipo + ")?</h2>");
-					$('#deleteButton').html("<a class='btn btn-danger' href='" + url + "'>Annulla</a>");
+					$('#deleteButton').html("<a class='btn btn-danger' href='" + url + "'>Elimina</a>");
 			    }
 			}
 
